Tweak eoy2023 donate button sizing to fix any clipping on non-english locales.

--- a/assets/less/pages/eoy-2023-style.less
+++ b/assets/less/pages/eoy-2023-style.less
@@ -96,7 +96,7 @@ body {
 
   .btn-donate-appeal {
     display: flex;
-    width: 280px;
+    min-width: 260px;
     height: 64px;
     border-radius: 8.75px;
     border: 0;
@@ -105,7 +105,10 @@ body {
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    text-align: center;
     transition: all .3s !important;
+    padding-left: 10px;
+    padding-right: 10px;
 
     // Text
     .heart {
@@ -124,7 +127,7 @@ body {
       font-weight: 700;
       font-size: 35px;
       line-height: 42px;
-      width: 124px;
+      min-width: 124px;
       background: linear-gradient(180deg, #F9FAFB 0%, #E2E5E8 100%);
       background-clip: text;
       -webkit-text-fill-color: transparent;
